--- a/public/css/style.css
+++ b/public/css/style.css
@@ -212,7 +212,7 @@ a:focus,
   background-color: #e5e5e5;
   -webkit-background-size: cover;
   -moz-background-size: cover;
-  background-size: cover;
+  background-size: 100%;
   -o-background-size: cover;
 }
 .intro .overlay {
