--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,15 @@
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 700px) {
   #features {
     padding: 20px;
-    width: 111%;
+    width: 100%;
+  }
+  #header {
+    width: 100%;
+  }
+  #menu {
+    position: relative;
+    margin-bottom: 0px;
+    width: 100vw;
   }
   #about,
   #services,
@@ -9,10 +17,10 @@
   #team,
   #contact,
   #footer {
-    width: 111%;
+    width: 100%;
   }
 
   #portfolio {
-    width: 110%;
+    width: 100%;
   }
 }
