--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,15 @@
 @media screen and (max-width: 700px) {
   #features {
-    padding: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     width: 100%;
+  }
+  .container {
+    width: 100%;
+  }
+  .logoImage {
+    width: 100px;
+    height: 100px;
   }
   #header {
     width: 100%;
@@ -22,5 +30,19 @@
 
   #portfolio {
     width: 100%;
+  }
+  .portfolio-items {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .spotify {
+    margin-bottom: 50px;
+  }
+
+  #contact {
+    padding-left: 80px;
+    padding-right: 80px;
   }
 }
