--- a/public/css/style.css
+++ b/public/css/style.css
@@ -210,6 +210,7 @@ a:focus,
 /* Header Section */
 .intro {
   display: table;
+  table-layout: fixed;
   width: 100%;
   padding: 0;
   background: url(../img/intro-bg.jpg) center center no-repeat;
