--- a/public/css/style.css
+++ b/public/css/style.css
@@ -80,7 +80,7 @@ hr {
   transition: all 0.8s;
 }
 #menu.navbar-default {
-  background-color: #fff;
+  background-color: #53595a;
   border-color: rgba(231, 231, 231, 0);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
 }
@@ -88,13 +88,13 @@ hr {
   font-family: "Raleway", sans-serif;
   font-size: 24px;
   font-weight: 700;
-  color: #333;
   text-transform: uppercase;
+  color: #98babc;
 }
 #menu.navbar-default .navbar-nav > li > a {
   font-family: "Lato", sans-serif;
   text-transform: uppercase;
-  color: #555;
+  color: #fffdf6;
   font-size: 15px;
   font-weight: 400;
   padding: 8px 2px;
@@ -108,7 +108,7 @@ hr {
   bottom: -1px;
   width: 0;
   height: 2px;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+  background: linear-gradient(to right, #bac0bd 0%, #98babc 100%);
   content: "";
   transition: width 0.2s;
 }
@@ -129,7 +129,7 @@ hr {
   bottom: -1px !important;
   width: 100% !important;
   height: 2px !important;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%) !important;
+  background: linear-gradient(to right, #bac0bd 0%, #98babc 100%);
   content: "" !important;
   transition: width 0.2s !important;
 }
@@ -138,11 +138,11 @@ hr {
 }
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-  background-color: #fff;
-  border-color: #608dfd;
+  background-color: #53595a;
+  border-color: #bac0bd;
 }
 .navbar-default .navbar-toggle:hover > .icon-bar {
-  background-color: #608dfd;
+  background-color: #bac0bd;
 }
 .section-title {
   margin-bottom: 70px;
@@ -156,7 +156,7 @@ hr {
 .section-title h2::after {
   position: absolute;
   content: "";
-  background: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
+  background: linear-gradient(to right, #bac0bd 0%, #98babc 100%);
   height: 4px;
   width: 60px;
   bottom: 0;
@@ -170,8 +170,8 @@ hr {
   font-family: "Raleway", sans-serif;
   text-transform: uppercase;
   color: #fff;
-  background-color: #5ca9fb;
-  background-image: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
+  background-color: #98babc;
+  background: linear-gradient(to right, #bac0bd 0%, #98babc 100%);
   padding: 14px 34px;
   letter-spacing: 1px;
   margin: 0;
@@ -188,7 +188,7 @@ hr {
 .btn-custom.active {
   color: #fff;
   background-image: none;
-  background-color: #6372ff;
+  background-color: #98babc;
 }
 .btn:active,
 .btn.active {
@@ -213,7 +213,7 @@ a:focus,
   table-layout: fixed;
   width: 100%;
   padding: 0;
-  background: url(../img/intro.jpg) center center no-repeat;
+  background: url(../img/intro-blur.jpg) center center no-repeat;
   background-color: #e5e5e5;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -262,7 +262,8 @@ header .intro-text {
   height: 100px;
   padding: 30px 0;
   border-radius: 50%;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+  /*background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);*/
+  background: linear-gradient(to right, #bac0bd 0%, #98babc 100%);
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
 }
 /* About Section */
@@ -281,7 +282,8 @@ header .intro-text {
 #about h2::after {
   position: absolute;
   content: "";
-  background: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
+  /*background: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);*/
+  background: linear-gradient(to right, #bac0bd 0%, #98babc 100%);
   height: 4px;
   width: 60px;
   bottom: 0;
@@ -304,7 +306,7 @@ header .intro-text {
 #about img {
   width: 520px;
   margin-top: 10px;
-  background: #fff;
+  background: #bac0bd;
   border-right: 0;
   box-shadow: 0 0 50px rgba(0, 0, 0, 0.06);
 }
@@ -315,7 +317,8 @@ header .intro-text {
 /* Services Section */
 #services {
   padding: 100px 0;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+  /*background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);*/
+  background: linear-gradient(to right, #bac0bd 0%, #98babc 100%);
   color: #fff;
 }
 #services .service-desc {
@@ -339,7 +342,8 @@ header .intro-text {
   width: 120px;
   height: 120px;
   padding: 40px 0;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+  /*background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);*/
+  background: linear-gradient(to right, #bac0bd 0%, #98babc 100%);
   border-radius: 50%;
   color: #fff;
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
@@ -358,6 +362,8 @@ header .intro-text {
 /* Portfolio Section */
 #portfolio {
   padding: 100px 0;
+  /*background-color: #d7dedb;*/
+  background-color: #dfe8e3;
 }
 .portfolio-item {
   margin: 1px -15px 0 -14px;
@@ -386,7 +392,7 @@ header .intro-text {
 }
 .hover-bg .hover-text > h4 {
   opacity: 0;
-  color: #fff;
+  color: #bac0bd;
   -webkit-transform: translateY(100%);
   transform: translateY(100%);
   transition: all 0.3s;
@@ -407,7 +413,7 @@ header .intro-text {
 /* Testimonials Section */
 #testimonials {
   padding: 100px 0;
-  background: #f6f6f6;
+  background: #bac0bd;
 }
 #testimonials i {
   color: #e6e6e6;
@@ -465,7 +471,8 @@ header .intro-text {
 /* Contact Section */
 #contact {
   padding: 100px 0 60px;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+  /*background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);*/
+  background: linear-gradient(to right, #797e7e 0%, #98babc 100%);
   color: rgba(255, 255, 255, 0.75);
 }
 #contact .section-title {
