--- a/public/css/style.css
+++ b/public/css/style.css
@@ -262,7 +262,6 @@ header .intro-text {
   height: 100px;
   padding: 30px 0;
   border-radius: 50%;
-  /*background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);*/
   background: linear-gradient(to right, #bac0bd 0%, #98babc 100%);
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
 }
@@ -282,7 +281,6 @@ header .intro-text {
 #about h2::after {
   position: absolute;
   content: "";
-  /*background: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);*/
   background: linear-gradient(to right, #bac0bd 0%, #98babc 100%);
   height: 4px;
   width: 60px;
@@ -317,7 +315,6 @@ header .intro-text {
 /* Services Section */
 #services {
   padding: 100px 0;
-  /*background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);*/
   background: linear-gradient(to right, #bac0bd 0%, #98babc 100%);
   color: #fff;
 }
@@ -342,7 +339,6 @@ header .intro-text {
   width: 120px;
   height: 120px;
   padding: 40px 0;
-  /*background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);*/
   background: linear-gradient(to right, #bac0bd 0%, #98babc 100%);
   border-radius: 50%;
   color: #fff;
@@ -378,12 +374,13 @@ header .intro-text {
   position: absolute;
   text-align: center;
   margin: 0 auto;
-  color: #fff;
+  color: #333333;
   background: linear-gradient(
     to right,
-    rgba(99, 114, 255, 0.8) 0%,
-    rgba(92, 169, 251, 0.8) 100%
+    rgba(186, 192, 189, 0.8) 0%,
+    rgba(152, 186, 188, 0.8) 100%
   );
+  /*background: linear-gradient(to right, #bac0bd 0%, #98babc 100%);*/
   padding: 30% 0 0;
   height: 100%;
   width: 100%;
@@ -392,7 +389,7 @@ header .intro-text {
 }
 .hover-bg .hover-text > h4 {
   opacity: 0;
-  color: #bac0bd;
+  color: #333333;
   -webkit-transform: translateY(100%);
   transform: translateY(100%);
   transition: all 0.3s;
